2010-05-14  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	Increase porter set up messages log level.

2010-05-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/assistant/models.py:
	Fix typo.

2010-05-07  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Julien Le Goff  <jlegoff@flumotion.com>

	* flumotion/component/misc/httpserver/cachemanager.py:
	* flumotion/test/test_component_providers.py:
	Start and stop plug in LocalPathCachedProvider setup()/teardown().

	This fixes the race condition in the test suite execution, and
	removes the need for the ProcessOutputHelper wrapper.

2010-05-06  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	* flumotion/common/testsuite.py:
	* flumotion/test/test_common_eventcalendar.py:
	* flumotion/test/test_component_disker.py:
	* flumotion/test/test_component_httpserver.py:
	* flumotion/test/test_component_httpserver_httpcached_strategy.py:
	* flumotion/test/test_component_httpstreamer.py:
	* flumotion/test/test_component_padmonitor.py:
	* flumotion/test/test_comptest.py:
	* flumotion/test/test_dialogs.py:
	* flumotion/test/test_greeter.py:
	* flumotion/test/test_server_selector.py:
	* flumotion/test/test_testclasses.py:
	Do not decorate classes.  Support for class decorators was added
	in Python 2.6 (and we support Python >= 2.4).

2010-05-06  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>

	reviewed by: Sébastien Merle  <sebastien@flumotion.com>

	* flumotion/test/bouncertest.py:
	* flumotion/test/test_admin_admin.py:
	* flumotion/test/test_admin_multi.py:
	* flumotion/test/test_cache_manager.py:
	* flumotion/test/test_common_avltree.py:
	* flumotion/test/test_common_bundle.py:
	* flumotion/test/test_common_componentui.py:
	* flumotion/test/test_common_eventcalendar.py:
	* flumotion/test/test_common_process.py:
	* flumotion/test/test_component_disker.py:
	* flumotion/test/test_component_httpserver.py: