@@ -1,5 +1,10 @@
 2010-05-14  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
 
+	* flumotion/component/misc/httpserver/httpserver.py:
+	Increase httpserver set up messages log level.
+
+2010-05-14  Xavier Martinez-Hidalgo  <xmartinez@flumotion.com>
+
 	* flumotion/component/misc/porter/porter.py:
 	Increase porter set up messages log level.
 
